# ssh-jumper

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: agent.conf.example  agent_tokens.conf.example  child_nodes.conf.example  server.conf.example  user_permissions.conf.example
docker/: Dockerfile  README.md  manual-test.sh  perf-compare.sh  ssh_jump_agent  ssh_jump_server  test.sh
docker/scripts/: client-test.sh  start-agent.sh  start-server.sh
docker/server-config/: agent_tokens.conf  child_nodes.conf  config.conf  host_key  host_key.pub  host_key_ecdsa  host_key_ecdsa.pub  ssh_jump_agent  ssh_jump_server  user_permissions.conf  users.conf
docs/: README.md  configuration.md  deployment.md  nat-test-matrix.md  performance.md  protocol.md  quickstart.md
func_tests/: func_test_framework.h  func_test_main.cpp  test_env.h  test_integration.cpp  test_server_basic.cpp
include/: asset_manager.h  cluster_manager.h  common.h  config_manager.h  event_loop.h  interactive_session.h  node_registry.h  password_utils.h  session_recorder.h  ssh_connection.h  ssh_server.h  thread_pool.h
scripts/: install_folly.sh  install_project.sh
src/: agent_main.cpp  asset_manager.cpp  cluster_admin_tool.cpp  cluster_manager.cpp  cluster_node_tool.cpp  common.cpp  config_manager.cpp  event_loop.cpp  interactive_session.cpp  main.cpp  node_registry.cpp  node_tool.cpp  session_recorder.cpp  ssh_server.cpp  thread_pool.cpp  user_tool.cpp
test_env/: agent_tokens.conf  child_nodes.conf  config.conf  host_key  host_key.pub  host_key_ecdsa  host_key_ecdsa.pub  user_permissions.conf  users.conf
tests/: benchmark_forward_executor.cpp  test_asset_manager.cpp  test_cluster_manager.cpp  test_common.cpp  test_config.cpp  test_framework.h  test_main.cpp  test_node_registry.cpp
